--- a/app/src/main/res/layout/fragment_device_connection_description.xml
+++ b/app/src/main/res/layout/fragment_device_connection_description.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="@dimen/y34"
             android:drawablePadding="@dimen/y14"
             android:drawableStart="@drawable/icon_power_off"
-            android:text="请检查设备是否已开机"
+            android:text="@string/DEVICE_OFFLINE1"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp18"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
             android:layout_marginEnd="@dimen/y16"
             android:layout_marginStart="@dimen/y50"
             android:layout_marginTop="@dimen/y9"
-            android:text="设备电源灯常亮则开机,未常亮请长按开机键,直至蓝灯常亮"
+            android:text="@string/DEVICE_OFFLINE2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/sure_power" />
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/y6"
-            android:text="请检查周围网络"
+            android:text="@string/DEVICE_OFFLINE3"
             android:textColor="@color/color_999999"
             app:layout_constraintEnd_toEndOf="@+id/sure_divider"
             app:layout_constraintStart_toStartOf="@+id/sure_divider"
@@ -79,7 +79,7 @@
             android:layout_marginTop="@dimen/y36"
             android:drawablePadding="@dimen/y14"
             android:drawableStart="@drawable/icon_wifi_off"
-            android:text="有可用WiFi"
+            android:text="@string/DEVICE_OFFLINE4"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp18"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +92,7 @@
             android:layout_marginEnd="@dimen/y16"
             android:layout_marginStart="@dimen/y50"
             android:layout_marginTop="@dimen/y9"
-            android:text="请给设备配置WiFi进行连接"
+            android:text="@string/DEVICE_OFFLINE5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/wifi_way_title" />
@@ -103,7 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/y51"
             android:layout_marginTop="@dimen/y16"
-            android:text="去设置"
+            android:text="@string/Tap1_Tosetup"
             android:textColor="@color/color_4b9fd5"
             android:textSize="@dimen/sp16"
             app:layout_constraintStart_toStartOf="parent"
@@ -117,8 +117,8 @@
             android:layout_marginStart="@dimen/y15"
             android:layout_marginTop="@dimen/y43"
             android:drawablePadding="@dimen/y14"
-            android:drawableStart="@drawable/icon_wifi_off"
-            android:text="无可用WiFi"
+            android:drawableStart="@drawable/icon_ap_off"
+            android:text="@string/DEVICE_OFFLINE6"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp18"
             app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +131,7 @@
             android:layout_marginEnd="@dimen/y16"
             android:layout_marginStart="@dimen/y50"
             android:layout_marginTop="@dimen/y9"
-            android:text="请给设备配置WiFi进行连接"
+            android:text="@string/DEVICE_OFFLINE7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView6"
 
@@ -144,7 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/y51"
             android:layout_marginTop="@dimen/y16"
-            android:text="去设置"
+            android:text="@string/Tap1_Tosetup"
             android:textColor="@color/color_4b9fd5"
             android:textSize="@dimen/sp16"
             app:layout_constraintStart_toStartOf="parent"
