--- a/app/src/main/res/values/oem_.xml
+++ b/app/src/main/res/values/oem_.xml
@@ -12,7 +12,7 @@
     <bool name="show_scan_bind_interface">true</bool>
     <bool name="show_third_login">true</bool>
     <bool name="show_share_btn">true</bool>
-    <bool name="show_wechat_entrance">true</bool>
+    <bool name="show_wechat_entrance">false</bool>
     <string name="qrcode_prefix">http://a.app.qq.com/o/simple.jsp?pkgname=%1$s&amp;id=%2$s</string>
     <string name="share_to_friends_link">http://a.app.qq.com/o/simple.jsp?pkgname=%s</string>
     <item name="share_default_description" format="reference" type="string">
