--- a/app/src/main/res/layout/fragment_panorama_message_wrapper.xml
+++ b/app/src/main/res/layout/fragment_panorama_message_wrapper.xml
@@ -16,6 +16,8 @@
         app:ct_left_title="消息"
         app:ct_left_title_color="#FFFFFF"
         app:ct_left_title_size="@dimen/sp17"
+        app:ct_right_title="@string/EDIT_THEME"
+        app:ct_right_title_color="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
