--- a/app/src/main/res/anim/slide_in_right.xml
+++ b/app/src/main/res/anim/slide_in_right.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/accelerate_interpolator">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:duration="400"
+        android:duration="@android:integer/config_mediumAnimTime"
         android:fromXDelta="100%p"
         android:toXDelta="0" />
 </set>
