--- a/app/src/main/res/layout/layout_item_home_page_list.xml
+++ b/app/src/main/res/layout/layout_item_home_page_list.xml
@@ -89,42 +89,42 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/img_device_state_0"
+            android:id="@+id/img_device_state_net"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x2"
             android:visibility="gone" />
 
         <ImageView
-            android:id="@+id/img_device_state_1"
+            android:id="@+id/img_device_state_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x2"
             android:visibility="gone" />
 
         <ImageView
-            android:id="@+id/img_device_state_2"
+            android:id="@+id/img_device_state_battery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x2"
             android:visibility="gone" />
 
         <ImageView
-            android:id="@+id/img_device_state_3"
+            android:id="@+id/img_device_state_safe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x2"
             android:visibility="gone" />
 
         <ImageView
-            android:id="@+id/img_device_state_4"
+            android:id="@+id/img_device_state_standby"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x2"
             android:visibility="gone" />
 
         <ImageView
-            android:id="@+id/img_device_state_5"
+            android:id="@+id/img_device_state_record"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x2"
