--- a/app/src/main/res/layout/item_text_view.xml
+++ b/app/src/main/res/layout/item_text_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/y43"
     android:gravity="center"
     android:text="AAA"
-    android:textColor="#F00"
-    android:textSize="@dimen/sp24" />
+    android:textColor="@color/color_4b9fd5"
+    android:textSize="@dimen/sp20" />
