--- a/app/src/main/res/layout/fragment_device_connection_description.xml
+++ b/app/src/main/res/layout/fragment_device_connection_description.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.constraint.ConstraintLayout
@@ -88,14 +89,15 @@
         <TextView
             android:id="@+id/textView3"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="18dp"
             android:layout_marginEnd="@dimen/y16"
             android:layout_marginStart="@dimen/y50"
             android:layout_marginTop="@dimen/y9"
             android:text="@string/DEVICE_OFFLINE5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/wifi_way_title" />
+            app:layout_constraintTop_toBottomOf="@+id/wifi_way_title"
+            tools:layout_editor_absoluteY="352dp" />
 
         <TextView
             android:id="@+id/setup_wifi"
