#116437,消息列表,全景图片居中

--- a/app/src/main/res/layout/layout_item_cam_msg_1pic.xml
+++ b/app/src/main/res/layout/layout_item_cam_msg_1pic.xml
@@ -65,32 +65,15 @@
             android:layout_marginTop="@dimen/y10"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imgV_cam_message_pic_0"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+            <com.cylan.jiafeigou.widget.AspectRatioImageView
+                android:id="@+id/imgV_cam_message_pic0"
+                android:layout_width="@dimen/x161"
+                android:layout_height="@dimen/y120"
                 android:layout_marginEnd="@dimen/x2"
                 android:layout_marginStart="@dimen/x2"
                 android:scaleType="fitXY"
                 android:src="@drawable/wonderful_pic_place_holder" />
 
-            <ImageView
-                android:id="@+id/imgV_cam_message_pic_1"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="@dimen/x2"
-                android:layout_marginStart="@dimen/x2"
-                android:scaleType="fitXY"
-                android:src="@drawable/wonderful_pic_place_holder" />
-
-            <ImageView
-                android:id="@+id/imgV_cam_message_pic_2"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="@dimen/x2"
-                android:layout_marginStart="@dimen/x2"
-                android:scaleType="fitXY"
-                android:src="@drawable/wonderful_pic_place_holder" />
         </LinearLayout>
 
         <FrameLayout
