--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -58,7 +58,7 @@
                 android:layout_marginEnd="@dimen/y11"
                 android:background="@android:color/transparent"
                 android:padding="@dimen/y5"
-                android:src="@drawable/icon_setting"
+                android:src="@drawable/icon_setting_selector"
                 app:t_border_color="@color/color_white"
                 app:t_border_width="@dimen/y1"
                 app:t_point_color="@color/color_red_dot_f43531"
@@ -226,7 +226,7 @@
         android:id="@+id/act_panorama_camera_upgrading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="固件升级中..."
+        android:text="@string/VIDEO_FirmwareUpdating"
         android:textColor="#FFFFFF"
         android:textSize="@dimen/sp18"
         android:visibility="invisible"
