--- a/app/src/main/res/layout/fragment_airecognition.xml
+++ b/app/src/main/res/layout/fragment_airecognition.xml
@@ -23,16 +23,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/v_shadow"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/y10"
-        android:background="@drawable/little_shape"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />
-
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_ai_selection"
@@ -40,6 +30,15 @@
         android:layout_height="0dp"
         android:background="@color/color_f0f0f0"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />
+
+    <View
+        android:id="@+id/v_shadow"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/y10"
+        android:background="@drawable/little_shape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/custom_toolbar" />
